[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/player.player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ColourSwitcher.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="ColourSwitcher" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.3, 1.3 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="SelfDestruct" type="Timer" parent="."]
wait_time = 5.0
[connection signal="body_entered" from="." to="." method="_on_ColourSwitcher_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="SelfDestruct" to="." method="_on_SelfDestruct_timeout"]
